# Vista

./: .gitignore  README.md  bin_to_st.py  init_proj_path.py  pyproject.toml  requirements.txt  reward.py  reward_utils.py  sample.py  sample_utils.py  train.py
.github/: FUNDING.yml
configs/example/: nusc_train.yaml
configs/inference/: vista.yaml  vista_action.yaml
configs/training/: vista.yaml  vista_action.yaml  vista_phase1.yaml  vista_phase2_stage1.yaml  vista_phase2_stage2.yaml
docs/: INSTALL.md  ISSUES.md  SAMPLING.md  TRAINING.md
tests/: conftest.py  test_setup_validation.py
vwm/: lr_scheduler.py  util.py
vwm/data/: dataset.py
vwm/data/subsets/: __init__.py  common.py  nuscenes.py  youtube.py
vwm/models/: autoencoder.py  diffusion.py
vwm/modules/: __init__.py  attention.py  ema.py  video_attention.py
vwm/modules/autoencoding/: temporal_ae.py
vwm/modules/autoencoding/regularizers/: __init__.py
vwm/modules/diffusionmodules/: denoiser.py  denoiser_scaling.py  discretizer.py  guiders.py  loss.py  loss_weighting.py  model.py  openaimodel.py  sampling.py  sampling_utils.py  sigma_sampling.py  util.py  video_model.py  wrappers.py
vwm/modules/distributions/: distributions.py
vwm/modules/encoders/: modules.py
